changed the alignment issue

--- a/index.css
+++ b/index.css
@@ -254,10 +254,10 @@ li a.color_change {
     background-image: url("./assets/images/about_us.svg");
     opacity: 1;
     min-height: 100%;
-    max-height: 500px;
+    background-attachment: fixed;
     background-position: bottom;
-    background-repeat: repeat;
-    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 
